Adicionadas novas properties do tipos de DOU no site da imprensa nacional.

--- a/PDFDOU/src/config_pt_BR.properties
+++ b/PDFDOU/src/config_pt_BR.properties
@@ -13,4 +13,10 @@ XPath1oItemListaLinks="//*[@id='conteudo']/table/tbody/tr[INDICE]/th/a"
 Substituicao1oItemListaLinks=INDICE
 NenhumItemEncontrado="Nenhum item encontrado para a pesquisa solicitada."
 XPath2aPagina="//*[@id="paginacao"]/span/a[1]"
-ElementoUltimaPagina="<b>Último</b>" 
+ElementoUltimaPagina="<b>Último</b>"
+SECAO_1="//*[@id='em-destaque']/div/div[1]/div/div/div/div/div/form/div/div[2]/span[2]/input"
+SECAO_2="//*[@id='em-destaque']/div/div[1]/div/div/div/div/div/form/div/div[2]/span[3]/input"
+SECAO_3="//*[@id='em-destaque']/div/div[1]/div/div/div/div/div/form/div/div[2]/span[4]/input"
+DJ="//*[@id='em-destaque']/div/div[1]/div/div/div/div/div/form/div/div[2]/span[5]/input"
+eDJF1="//*[@id='em-destaque']/div/div[1]/div/div/div/div/div/form/div/div[2]/span[6]/input"
+TODOS="//*[@id='chk_avancada_0']"
